--- a/host.html
+++ b/host.html
@@ -280,7 +280,7 @@
   <script src="host.js"></script>
   
 <audio controls id="drumroll">
-    <source src="drumroll.mp3" />
+    <source src="drumRoll.mp3" />
 </audio>
 <audio controls id="GO">
   <source src="GO.mp3" />
